--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     profiles:
       - load-test
     image: williamyeh/wrk
-    command: ["-t", "6", "-c", "96", "-d", "20s", "--latency", "http://ucar-app:8000/v1/incident"]
+    command: ["-t", "6", "-c", "78", "-d", "600s", "--latency", "http://ucar-app:8000/v1/incident"]
     depends_on:
       ucar-app:
         condition: service_started
@@ -22,11 +22,11 @@ services:
       DEBUG: "false"
     env_file:
       - .env
-    deploy:
-      resources:
-        limits:
-          cpus: '4'
-          memory: 4G
+#    deploy:
+#      resources:
+#        limits:
+#          cpus: '4'
+#          memory: 4G
     depends_on:
       ucar-db:
         condition: service_healthy
@@ -41,11 +41,11 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
-    deploy:
-      resources:
-        limits:
-          cpus: '2'
-          memory: '4g'
+#    deploy:
+#      resources:
+#        limits:
+#          cpus: '2'
+#          memory: '4g'
     volumes:
       - pg_data:/var/lib/postgresql/data
       - ./postgres_config/postgresql.conf:/etc/postgresql/postgresql.conf
@@ -72,6 +72,9 @@ services:
       POSTGRESQL_PORT_NUMBER: ${DB_PORT_INTERNAL}
       POSTGRESQL_USERNAME: ${DB_USER}
       POSTGRESQL_PASSWORD: ${DB_PASSWORD}
+      PGBOUNCER_AUTH_TYPE: scram-sha-256
+      PGBOUNCER_SERVER_IDLE_TIMEOUT: 60
+      PGBOUNCER_SERVER_LIFETIME: 3600
 
       # Настройки pgbouncer
       PGBOUNCER_DATABASE: ${DB_NAME}
@@ -79,6 +82,8 @@ services:
       PGBOUNCER_AUTH_PASSWORD: ${DB_PASSWORD}
       PGBOUNCER_POOL_MODE: transaction
       PGBOUNCER_MAX_CLIENT_CONN: 1000    # макс клиентов к pgbouncer
+      PGBOUNCER_MAX_DB_CONNECTIONS: 100
+      PGBOUNCER_MIN_POOL_SIZE: 5
       PGBOUNCER_DEFAULT_POOL_SIZE: 25    # число одновременных транзакций, которые PostgreSQL может эффективно обрабатывать. = (1.5 – 2.5) × число ядер
       PGBOUNCER_RESERVE_POOL_SIZE: 5     # резерв при пике
       PGBOUNCER_IGNORE_STARTUP_PARAMETERS: extra_float_digits # управляет точностью вывода чисел с плавающей точкой.
