--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "fastapi[standard]>=0.121.2",
     "granian[uvloop]>=2.6.0",
     "itsdangerous>=2.2.0",
+    "orjson>=3.11.7",
     "psycopg[binary,pool]>=3.3.2",
     "pydantic-settings>=2.12.0",
     "pylint>=4.0.3",
